Bobby photobob design.

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -6,7 +6,7 @@
     "cancel": "Cancel"
   },
   "sidebar": {
-    "general": "General",
+    "general": "Speech / Mic",
     "advanced": "Advanced",
     "postProcessing": "API Post Processing",
     "aiReplace": "AI Replace",
