--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -111,8 +111,17 @@
             "description": "Converts your speech into text."
           },
           "send_to_extension": {
-            "name": "Send Transcription to Extension",
+            "name": "Send Transcription Directly to Extension",
             "description": "Send transcription to AivoRelay Connector browser extension.",
+            "enable": {
+              "label": "Enable Feature",
+              "description": "⚠️ Risk: Your voice input is sent directly to the AI chat provider. You may accidentally send unintended audio to the AI.",
+              "warning": {
+                "title": "⚠️ Warning: Risky Feature",
+                "message": "This feature sends your voice transcription directly to an AI chat provider through the browser extension. You may accidentally send unintended voice input to the AI. Are you sure you want to enable this?",
+                "confirm": "I Understand the Risk"
+              }
+            },
             "pushToTalk": {
               "label": "Push To Talk",
               "description": "When ON: hold key to record. When OFF: tap once to start, tap again to stop."
@@ -121,6 +130,15 @@
           "send_to_extension_with_selection": {
             "name": "Send Transcription + Selection to Extension",
             "description": "Send transcription plus selected text to AivoRelay Connector browser extension.",
+            "enable": {
+              "label": "Enable Feature",
+              "description": "⚠️ Risk: Your selected text and voice input are sent to the AI chat provider. You may accidentally send unintended text to the AI.",
+              "warning": {
+                "title": "⚠️ Warning: Risky Feature",
+                "message": "This feature sends your selected text and voice transcription to an AI chat provider through the browser extension. You may accidentally send unintended or sensitive text to the AI. Are you sure you want to enable this?",
+                "confirm": "I Understand the Risk"
+              }
+            },
             "pushToTalk": {
               "label": "Push To Talk",
               "description": "When ON: hold key to record. When OFF: tap once to start, tap again to stop."
@@ -137,6 +155,15 @@
           "send_screenshot_to_extension": {
             "name": "Send Transcription + Screenshot to Extension",
             "description": "Capture a screenshot region and send it with voice instruction to the browser extension.",
+            "enable": {
+              "label": "Enable Feature",
+              "description": "⚠️ Risk: Your screenshot and voice input are sent to the AI chat provider. You may accidentally send unintended images to the AI.",
+              "warning": {
+                "title": "⚠️ Warning: Risky Feature",
+                "message": "This feature sends a screenshot and your voice transcription to an AI chat provider through the browser extension. You may accidentally send unintended or sensitive images to the AI. Are you sure you want to enable this?",
+                "confirm": "I Understand the Risk"
+              }
+            },
             "pushToTalk": {
               "label": "Push To Talk",
               "description": "When ON: hold key to record. When OFF: tap once to start, tap again to stop."
