Link to source code

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -569,7 +569,7 @@
       },
       "sourceCode": {
         "title": "Source Code",
-        "description": "View source code and contribute",
+        "description": "View source code and contribute to this project",
         "button": "View on GitHub"
       },
       "supportDevelopment": {
