clearer button messages

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -592,10 +592,10 @@
       "supportDevelopment": {
         "title": "Support Original Author",
         "description": "Support the developer of the original Handy project",
-        "button": "Donate to Original Author"
+        "button": "Donate to Original Author of Handy"
       },
       "supportFork": {
-        "title": "Support Fork (AivoRelay)",
+        "title": "Support this Fork - AivoRelay",
         "description": "Support the developer of this fork",
         "button": "Donate to author of fork (AivoRelay)"
       },
